Bug 424531 - kcm overlay incorrectly sized
Summary: kcm overlay incorrectly sized
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_powerdevil (other bugs)
Version First Reported In: 5.19.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-22 09:40 UTC by Harald Sitter
Modified: 2023-09-01 17:32 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.8
Sentry Crash Report:


Attachments
screenshot (145.75 KB, image/png)
2020-07-22 09:40 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2020-07-22 09:40:39 UTC
Created attachment 130312 [details]
screenshot

when powerdevil is not running or something the kcm displays an overlay that has an incorrect minimal size.

- have broken powerdevil
- go to energy kcm
- minimize systemsettings as small as possible
- overlay is now blocking the shell buttons

the overlay ought not block me from accessing the help button :((

also see attached screenshot
Comment 1 Andrew Shark 2023-08-30 09:13:39 UTC
Can reproduce.

To have an overlay, run `killall org_kde_powerdevil`. Later you can use `kstart5 /usr/lib/org_kde_powerdevil &` to run it again.
The overlay starts overlapping the buttons when there is a vertical scrollbar.

It also interferes with other pages. Once overlay was shown, it remains on some other pages. For example, in KDE Connect page. Also, while it is "not visible" on some other pages, like for example, About System, it still prevents of pressing button on the position it was shown. For example, I partly (for some area of the button) could not press "Copy info in English" on that page.
Also, when visiting powerdevil pages again, the additional overlay appears (instead of redrawing the previous). So the background becomes darker and darker as more times you visit powerdevil's kcms.

Operating System: Arch Linux 
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.109.0
Qt Version: 5.15.10
Graphics Platform: Wayland
Comment 2 Bug Janitor Service 2023-08-30 09:56:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/powerdevil/-/merge_requests/226
Comment 3 Andrew Shark 2023-08-30 14:29:37 UTC
Git commit e36fc3c9ed3df8ffc38f676d8e7083453e9e86b2 by Andrew Shark.
Committed on 30/08/2023 at 11:48.
Pushed by ngraham into branch 'master'.

Fix the error overlay shown on other kcms

After the error overlay was shown, when visiting certain other kcm pages (for example, kde connect), it was still shown.
Also fixes the overlay overlapping the bottom buttons.

M  +0    -6    kcmodule/common/ErrorOverlay.cpp

https://invent.kde.org/plasma/powerdevil/-/commit/e36fc3c9ed3df8ffc38f676d8e7083453e9e86b2
Comment 4 Nate Graham 2023-08-30 14:33:46 UTC
Git commit 23b42a9b17bf15860a8d6c07cf50f378240983a9 by Nate Graham, on behalf of Andrew Shark.
Committed on 30/08/2023 at 16:32.
Pushed by ngraham into branch 'Plasma/5.27'.

Fix the error overlay shown on other kcms

After the error overlay was shown, when visiting certain other kcm pages (for example, kde connect), it was still shown.
Also fixes the overlay overlapping the bottom buttons.


(cherry picked from commit e36fc3c9ed3df8ffc38f676d8e7083453e9e86b2)

M  +0    -6    kcmodule/common/ErrorOverlay.cpp

https://invent.kde.org/plasma/powerdevil/-/commit/23b42a9b17bf15860a8d6c07cf50f378240983a9