Fix the error overlay shown on other kcms

After the error overlay was shown, when visiting certain other kcm pages (for example, kde connect), it was still shown.
Also fixes the overlay overlapping the bottom buttons.

BUG: 424531


(cherry picked from commit e36fc3c9ed3df8ffc38f676d8e7083453e9e86b2)